Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13471

Test failure on innodb.log_file_size,4k

    XMLWordPrintable

Details

    Description

      WSREP XID is stored in the TRX_SYS page at innodb_page_size-3500, which overlaps with rseg undo slots, causing the following kind of error:

      170808 12:51:17 [ERROR] InnoDB: Unable to open undo tablespace './undo30579'.
      170808 12:51:17 [ERROR] Plugin 'InnoDB' init function returned error.
      170808 12:51:17 [ERROR] Plugin 'InnoDB' registration as a STORAGE ENGINE failed.
      

      In debug build this could also cause innodb-alter-tempfile,4k,innodb_plugin:

      2017-08-08 12:56:39 7f1f4b3edf40  InnoDB: Assertion failure in thread 139772383125312 in file buf0buf.cc line 2635
      InnoDB: Failing assertion: (!((zip_size) & ((zip_size) - 1)))
      

      For reference see:
      https://github.com/codership/galera/issues/398

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: