MDEV-13471: Test failure on innodb.log_file_size,4k

Problem was that 4k page size is not really supported in
Galera. For reference see:
	https://github.com/codership/galera/issues/398

Page size 4k is problematic for WSREP XID info location
that was set constant UNIV_PAGE_SIZE - 3500, conflicting
rseg undo slots location if there is lot of undo tablespaces.
Undo tablespace identifiers and page numbers require
at least 126*8=1024 bytes starting from offset 56. Therefore,
WSREP XID startig from offset 596 would overwrite several
space_id,page_no pairs storing undo tablespace ids and page
numbers. This will cause InnoDB startup failure seen as
ERROR] InnoDB: Unable to open undo tablespace './undo30579'.

Fixed by moving WSREP XID info in 4k page size to
UNIV_PAGE_SIZE - 2500 that is currently empty. When we
read WSREP XID we read from both locations. This is safe
as WSREP XID info existence is marded by 0x77737265 in a
such way that it can't be same as uninitialized bytes.

When WSREP XID info is written is always written to new
position on 4k page size. There is no need to fix location
for page sizes larger than 4k as there is enough free space in
page between rseg undo slots and WSREP XID info.

trx0sys.h
	Move TRX_SYS_WSREP_XID_INFO to UNIV_PAGE_SIZE-2500
	for 4K page size and for others keep it on original
	position UNIV_PAGE_SIZE-3500. Introduce a new
	constant TRX_SYS_WSREP_XID_INFO_OLD to be able to
	read WSREP XID info also from old location.

trx_sys_read_wsrep_checkpoint()
	Read WSREP XID info from both new location and
	old location. If WSREP XID info is not found
	from both location it is initialized to correct
	location. If WSREP XID is located set up the
	offset to location where it is.

There is no new test case as test cases
      innodb.log_file_size,4k
      innodb-alter-tempfile,4k

fail if this fix is not there.

Note that if WSREP XID info has overwritten undo log
tablespace id and page_no pairs. Server startup fails and
SST is needed.