storage/innobase/trx/trx0sys.cc
@@ -1,6 +1,7 @@
 /*****************************************************************************
 
 Copyright (c) 1996, 2017, Oracle and/or its affiliates. All Rights Reserved.
+Copyright (c) 2017, MariaDB Corporation.
 
 This program is free software; you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
@@ -321,49 +322,12 @@ trx_sys_print_mysql_binlog_offset(void)
 
 #ifdef WITH_WSREP
 
-#ifdef UNIV_DEBUG
-static long long trx_sys_cur_xid_seqno = -1;
-static unsigned char trx_sys_cur_xid_uuid[16];
-
-long long read_wsrep_xid_seqno(const XID* xid)
-{
-    long long seqno;
-    memcpy(&seqno, xid->data + 24, sizeof(long long));
-    return seqno;
-}
-
-void read_wsrep_xid_uuid(const XID* xid, unsigned char* buf)
-{
-    memcpy(buf, xid->data + 8, 16);
-}
-
-#endif /* UNIV_DEBUG */
-
 void
 trx_sys_update_wsrep_checkpoint(
         const XID*      xid,        /*!< in: transaction XID */
         trx_sysf_t*     sys_header, /*!< in: sys_header */
         mtr_t*          mtr)        /*!< in: mtr */
 {
-#ifdef UNIV_DEBUG
-        {
-            /* Check that seqno is monotonically increasing */
-            unsigned char xid_uuid[16];
-            long long xid_seqno = read_wsrep_xid_seqno(xid);
-            read_wsrep_xid_uuid(xid, xid_uuid);
-            if (!memcmp(xid_uuid, trx_sys_cur_xid_uuid, 8))
-            {
-                ut_ad(xid_seqno > trx_sys_cur_xid_seqno);
-                trx_sys_cur_xid_seqno = xid_seqno;
-            }
-            else
-            {
-                memcpy(trx_sys_cur_xid_uuid, xid_uuid, 16);
-            }
-            trx_sys_cur_xid_seqno = xid_seqno;
-        }
-#endif /* UNIV_DEBUG */
-
         ut_ad(xid && mtr);
         ut_a(xid->formatID == -1 || wsrep_is_wsrep_xid(xid));
 
@@ -401,7 +365,8 @@ trx_sys_read_wsrep_checkpoint(XID* xid)
 {
         trx_sysf_t* sys_header;
 	mtr_t	    mtr;
-        ulint       magic;
+	ulint	    magic, magic_old;
+	ulint	    offset;
 
         ut_ad(xid);
 
@@ -409,9 +374,25 @@ trx_sys_read_wsrep_checkpoint(XID* xid)
 
 	sys_header = trx_sysf_get(&mtr);
 
-        if ((magic = mach_read_from_4(sys_header + TRX_SYS_WSREP_XID_INFO
-                                      + TRX_SYS_WSREP_XID_MAGIC_N_FLD))
-            != TRX_SYS_WSREP_XID_MAGIC_N) {
+	magic = mach_read_from_4(sys_header + TRX_SYS_WSREP_XID_INFO
+		+ TRX_SYS_WSREP_XID_MAGIC_N_FLD);
+
+	/* In 4k page size WSREP XID info was before 5.5.58-galera,
+	10.0.32-galera, 10.1.27, 10.2.8 in incorrect location overlapping
+	rseg slots. Here, we need to read WSREP XID info from
+	both locations in 4k page size case. */
+	if (UNIV_PAGE_SIZE == 4096) {
+		magic_old = mach_read_from_4(sys_header + TRX_SYS_WSREP_XID_INFO_OLD
+			+ TRX_SYS_WSREP_XID_MAGIC_N_FLD);
+	} else {
+		magic_old = magic;
+	}
+
+	/* Here we check is there WSREP XID info on both locations. In
+	old releases it is not possible to have exactly these bytes
+	as uninitialized bytes. */
+        if (magic != TRX_SYS_WSREP_XID_MAGIC_N
+	    && magic_old != TRX_SYS_WSREP_XID_MAGIC_N) {
                 memset(xid, 0, sizeof(*xid));
                 xid->formatID = -1;
                 trx_sys_update_wsrep_checkpoint(xid, sys_header, &mtr);
@@ -419,18 +400,27 @@ trx_sys_read_wsrep_checkpoint(XID* xid)
                 return;
         }
 
+	/* Set up the position where to read WSREP XID that was
+	found. Old incorrect offset is unlikely. */
+	if (UNIV_LIKELY(magic == TRX_SYS_WSREP_XID_MAGIC_N)) {
+		offset = TRX_SYS_WSREP_XID_INFO;
+	} else {
+		offset = TRX_SYS_WSREP_XID_INFO_OLD;
+	}
+
         xid->formatID     = (int)mach_read_from_4(
                 sys_header
-                + TRX_SYS_WSREP_XID_INFO + TRX_SYS_WSREP_XID_FORMAT);
+                + offset + TRX_SYS_WSREP_XID_FORMAT);
         xid->gtrid_length = (int)mach_read_from_4(
                 sys_header
-                + TRX_SYS_WSREP_XID_INFO + TRX_SYS_WSREP_XID_GTRID_LEN);
+                + offset + TRX_SYS_WSREP_XID_GTRID_LEN);
         xid->bqual_length = (int)mach_read_from_4(
                 sys_header
-                + TRX_SYS_WSREP_XID_INFO + TRX_SYS_WSREP_XID_BQUAL_LEN);
+                + offset + TRX_SYS_WSREP_XID_BQUAL_LEN);
         ut_memcpy(xid->data,
-                  sys_header + TRX_SYS_WSREP_XID_INFO + TRX_SYS_WSREP_XID_DATA,
-                  XIDDATASIZE);
+		sys_header
+		+ offset + TRX_SYS_WSREP_XID_DATA,
+		XIDDATASIZE);
 
 	mtr_commit(&mtr);
 }
